# scrabble-words-streamlit

./: Procfile  app.py  fly.toml  pyproject.toml  requirements.txt
streamlit_scrabble_app/: __init__.py  anagramer.py
tests/: test_anagramer.py
