[tool.poetry]
name = "streamlit-scrabble-app"
version = "0.1.0"
description = "A streamlit app for finding scrabble words"
authors = ["Tom Waterman <tjwaterman99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
streamlit = "^1.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = 'lib' }
]